--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,21 @@
         <item>Bribes</item>
         <item>Other</item>
     </string-array>
+
+    <string-array name="specificCategories">
+        <item>All</item>
+        <item>Food</item>
+        <item>Entertainment</item>
+        <item>Housing/Rent</item>
+        <item>Family</item>
+        <item>Clothing</item>
+        <item>Transportation</item>
+        <item>Medical</item>
+        <item>Education</item>
+        <item>Personal</item>
+        <item>Travel</item>
+        <item>Savings</item>
+        <item>Bribes</item>
+        <item>Other</item>
+    </string-array>
 </resources>
