Master coder worked his magic! Add listenerForSingleValueEvent to mPurchaseReference in ChartActivity to retrieve an ArrayList of all Purchase objects in Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
         <item>Choose Category</item>
         <item>Food</item>
         <item>Entertainment</item>
-        <item>Housing/Rent</item>
+        <item>Housing</item>
         <item>Family</item>
         <item>Clothing</item>
         <item>Transportation</item>
@@ -22,7 +22,7 @@
         <item>All</item>
         <item>Food</item>
         <item>Entertainment</item>
-        <item>Housing/Rent</item>
+        <item>Housing</item>
         <item>Family</item>
         <item>Clothing</item>
         <item>Transportation</item>
