--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,11 @@
     <string-array name="categories">
         <item>Choose Category</item>
         <item>Food</item>
-        <item>Entertainment</item>
+        <item>Fun</item>
         <item>Housing</item>
         <item>Family</item>
         <item>Clothing</item>
-        <item>Transportation</item>
+        <item>Travel</item>
         <item>Medical</item>
         <item>Education</item>
         <item>Savings</item>
@@ -18,11 +18,11 @@
     <string-array name="specificCategories">
         <item>All</item>
         <item>Food</item>
-        <item>Entertainment</item>
+        <item>Fun</item>
         <item>Housing</item>
         <item>Family</item>
         <item>Clothing</item>
-        <item>Transportation</item>
+        <item>Travel</item>
         <item>Medical</item>
         <item>Education</item>
         <item>Savings</item>
